--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="countMe"
         android:background="@color/buttonBackground"
         android:text="Count"
         app:layout_constraintBottom_toBottomOf="parent"
